# gmail_to_md

./: .gitignore  CLAUDE.md  README.md  account_manager.py  accounts.yaml.example  auth.py  email_processor.py  gmail_api.py  gmail_to_markdown.py  gmail_to_markdown_backup.py  image_utils.py  oauth_setup.py  pyproject.toml  requirements.txt
docs/plans/: 2026-01-14-gmail-cli-design.md  2026-01-14-gmail-cli-implementation.md
