[project]
name = "gmail-to-markdown"
version = "1.0.0"
description = "Extract emails from Gmail and convert them to clean Markdown files with metadata preservation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.22.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "html-to-markdown>=1.3.2",
    "beautifulsoup4>=4.13.4",
    "tqdm>=4.66.2",
    "pyyaml>=6.0.1",
]

[project.scripts]
gmail-to-md = "gmail_to_markdown:main"

[tool.uv]
dev-dependencies = []
